fix overflow x

--- a/client/sass/donate.scss
+++ b/client/sass/donate.scss
@@ -350,6 +350,7 @@ a {
   .form-group__addon {
     color: #3C515F;
     top: 25%;
+    font-weight: bold;
   }
 
   .donate_react__submit {
